More precise description on how to access returned data from REVERT

--- a/EIPS/eip-140.md
+++ b/EIPS/eip-140.md
@@ -26,7 +26,7 @@ The `REVERT` instruction is introduced at `0xfd`. Execution is aborted, consider
 
 It expects two stack items, the top item is the `memory_offset` followed by `memory_length`. Both of these can equal to zero. The cost of the `REVERT` instruction equals to that of the `RETURN` instruction.
 
-The `REVERT` instruction uses the two stack items in the same way as the `RETURN` instruction to calculate a memory section.  The caller can access the memory section in the same way as if returned by the `RETURN` instruction.
+The `REVERT` instruction uses the two stack items in the same way as the `RETURN` instruction to calculate a memory section.  The caller can access the memory section in the same way as if returned by the `RETURN` instruction.  The `REVERT` instruction during contract creation does not deploy the contents of the memory region, but reveals the contents through the proposed [RETURNDATACOPY/SIZE instructions]().
 
 In case there is not enough gas left to cover the cost of `REVERT` or there is a stack underflow, the effect of the `REVERT` instruction will equal to that of a regular out of gas exception.
 
