Change EIP-233 to include hardfork proposals form Devcon

--- a/EIPS/eip-233.md
+++ b/EIPS/eip-233.md
@@ -14,9 +14,15 @@ To describe the formal process of preparing and activating hard forks.
 
 ## Motivation
 
-Today discussions about hard forks happen at various forums and sometimes in ad-hoc ways.
+Planning and implementation of a hard fork happens at various forums and sometimes in ad-hoc ways. The goal is to define a clear process of selecting, implementing and activating changes for a hard fork.
 
 ## Specification
+
+A hard fork should have a release cycle of 6 months split in the following cut off dates:
+- end of 1st month: submission of proposed changes
+- end of 3rd month: final decision of accepted changes
+- end of 4th month: changes not implemented in all major (*) clients are dropped
+- end of 5th month: changes deployed on a staging testnet
 
 A Meta EIP should be created and merged as a *Draft* as soon as a new hard fork is planned. This EIP should contain:
 - the desired codename of the hard fork,
