--- a/EIPS/eip-155.md
+++ b/EIPS/eip-155.md
@@ -59,10 +59,14 @@ This would provide a way to send transactions that work on Ethereum without work
 | 4              | Rinkeby                                    |
 | 8              | Ubiq mainnet                               |
 | 9              | Ubiq testnet                               |
+| 20             | EOS Classic mainnet                        |
+| 21             | EOS Classic testnet                        |
 | 30             | Rootstock mainnet                          |
 | 31             | Rootstock testnet                          |
 | 42             | Kovan                                      |
 | 61             | Ethereum Classic mainnet                   |
 | 62             | Ethereum Classic testnet                   |
+| 64             | Ellaism                                    |
 | 66             | ewasm testnet                              |
+| 88             | Expanse mainnet??                          |
 | 1337           | Geth private chains (default)              |
