--- a/EIPS/eip-155.md
+++ b/EIPS/eip-155.md
@@ -64,6 +64,7 @@ This would provide a way to send transactions that work on Ethereum without work
 | 42             | Kovan                                      |
 | 61             | Ethereum Classic mainnet                   |
 | 62             | Ethereum Classic testnet                   |
+| 64             | Ellaism                                    |
 | 66             | ewasm testnet                              |
 | 1337           | Geth private chains (default)              |
 | 6284           | Görli                                      |
