--- a/EIPS/eip-2200.md
+++ b/EIPS/eip-2200.md
@@ -109,7 +109,7 @@ the counter always stays positive.
 ## Rationale
 
 This EIP mostly achieves what a transient storage tries to do
-(EIP-1087 and EIP-1153), but without the complexity of introducing the
+([EIP-1087] and [EIP-1153]), but without the complexity of introducing the
 concept of "dirty maps", or an extra storage struct.
 
 * We don't suffer from the optimization limitation of
@@ -117,7 +117,7 @@ concept of "dirty maps", or an extra storage struct.
   and implicitly makes the assumption that a transaction's storage
   changes are committed to the storage trie at the end of a
   transaction. This works well for some implementations, but not for
-  others. After EIP-658, an efficient storage cache implementation
+  others. After [EIP-658], an efficient storage cache implementation
   would probably use an in-memory trie (without RLP encoding/decoding)
   or other immutable data structures to keep track of storage changes,
   and only commit changes at the end of a block. For them, it is
@@ -319,3 +319,6 @@ Copyright and related rights waived via [CC0](https://creativecommons.org/public
 [EIP-1283]: https://eips.ethereum.org/EIPS/eip-1283
 [EIP-1706]: https://eips.ethereum.org/EIPS/eip-1706
 [EIP-1884]: https://eips.ethereum.org/EIPS/eip-1884
+[EIP-1087]: https://eips.ethereum.org/EIPS/eip-1087
+[EIP-1153]: https://eips.ethereum.org/EIPS/eip-1153
+[EIP-658]: https://eips.ethereum.org/EIPS/eip-658
